# llm-to-3dprint

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  REVIEW.md  doc-contract.json  pyproject.toml
.agent-workflows/: README.md  agent-permission-policy.json  area-contracts.json  instruction-budgets.json  repo-review.md  tdd-red-green-receipt.md
.doc-contract-kit/: install.json  manifest.json
.github/: pull_request_template.md
docs/: backlog.md  bambu_3mf_pipeline.md  documentation-contract.md  generalised-specification.md  geometry-recipes.md  harness-engineering.md  lite-mode.md  planning-adapters.md  privacy-sweep.md  public-release-checklist.md  sidecar-retention.md  testing-strategy.md  tooling-references.md  upgrade-flow.md  versioning.md  working-rhythm.md
examples/: bambu_a1_hybrid_project.json  friction_lid_enclosure.json  rectangular_enclosure.json
schemas/: agent-permission-policy.schema.json  area-contracts.schema.json  persona-manifest.schema.json  research-brief.schema.json  research-source-report.schema.json  research-synthesis.schema.json  review-risk.schema.json  review-synthesis.schema.json  session-receipt.schema.json  task-packet.schema.json
scripts/: _agent_scope.py  agent_research.py  agent_review_run.py  agent_start.py  agent_task_cleanup.py  agent_task_finalize.py  agent_task_lifecycle.py  agent_task_prepare.py  agent_task_ready.py  agent_task_status.py  branch_readiness.py  changelog_update.py  check_doc_impact.py  check_docs_as_tests.py  check_docs_freshness.py  check_token_budget.py  classify_review_risk.py  docs_explain.py  goal_check.py  kit_status.py  kit_update_stack.py  (+6 more)
(+95 files in other folders)
