[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-to-3dprint"
version = "0.1.0"
description = "Starter kit for LLM-guided parametric CAD generation with Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
cad = [
    "cadquery>=2.5",
    "build123d>=0.9",
    "numpy>=1.26",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
llm-to-3dprint = "llm_to_3dprint.cli:main"
llm-to-3dprint-bambu-mcp = "llm_to_3dprint.bambu_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
