[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-to-3dprint"
version = "0.1.0"
description = "Starter kit for LLM-guided parametric CAD generation with Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
cad = [
    "cadquery>=2.7,<2.8",
    "build123d>=0.10,<0.11",
    "numpy>=1.26",
    "matplotlib>=3.8",
]
mesh = [
    "numpy>=1.26",
    "trimesh>=4.0",
    "open3d>=0.18",
    "manifold3d>=3.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
llm-to-3dprint = "llm_to_3dprint.cli:main"
llm-to-3dprint-bambu-mcp = "llm_to_3dprint.bambu_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
